prod/subscription_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-service
  labels:
    app: subscription_service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscription_service
  template:
    metadata:
      labels:
        app: subscription_service
    spec:
      containers:
      - name: subscription-service
        image: subscription_service
        ports:
        - containerPort: 8000
