prod/sub_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: subscription-service

spec:
  selector:
    app: subscription_service

  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
