prod/subscription_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: subscription-service

spec:
  ingressClassName: kong
  rules:
  - host: subscription.bloco.live
    http:
      paths:
      - backend:
          service:
            name: subscription_service
            port:
              number: 8000
        path: /
        pathType: Prefix
